--- a/index.html
+++ b/index.html
@@ -13,7 +13,7 @@
         <link href="https://fonts.googleapis.com/css?family=Saira+Extra+Condensed:500,700" rel="stylesheet" type="text/css" />
         <link href="https://fonts.googleapis.com/css?family=Muli:"400,400i,800,800i" rel="stylesheet" type="text/css" />
         <!-- Core theme CSS (includes Bootstrap)-->
-        <link href="https://github.com/Prabhjxtsingh/Personal-Site/blob/9e988ce323aca27b6daf67527ba9df50ef56ac12/styles.css" rel="stylesheet" />
+        <link href="styles.css" rel="stylesheet" />
     </head>
     <body id="page-top">
         <!-- Navigation-->
